Fix left plane horizontal scroll issue and increase text weight in webkit browsers

--- a/client/stylesheets/dash.import.styl
+++ b/client/stylesheets/dash.import.styl
@@ -39,12 +39,31 @@
   background-color #FFF
   overflow-x scroll
   padding 0 10px
-  width 350px
+  width $left-pane-width
   top 0
   bottom 0
 
-  .reactive-table tr
-    cursor pointer
+  .reactive-table
+    width $left-pane-width - 2
+    max-width $left-pane-width - 2
+    margin-left -10px
+    margin-right -10px
+    font-size 13px
+    tr
+      cursor pointer
+      &.selected
+        background-color desaturate(lighten(#DEEDDC, 20%),40%)
+      td
+        max-width 32%
+        &:first-of-type
+          padding-left 15px
+        &:last-of-type
+          padding-right 15px
+    th
+      &:first-of-type
+        padding-left 15px
+      &:last-of-type
+        padding-right 15px
 
   .btn-group
     margin-bottom 10px
@@ -75,6 +94,7 @@
     text-shadow 0 1px 1px rgba(0,0,0,.4)
     letter-spacing .03em
     box-shadow 0 1px 1px rgba(255,255,255,0)
+    -webkit-font-smoothing subpixel-antialiased
     &:hover
       box-shadow 0px 0px 0px 2px rgba(100,100,100,.5)
 
