--- a/client/stylesheets/layout.import.styl
+++ b/client/stylesheets/layout.import.styl
@@ -5,7 +5,7 @@ body
 
 .pane-container
   position absolute
-  left 350px
+  left $left-pane-width
   right 0
   top 0
   bottom 0
