--- a/client/stylesheets/map.import.styl
+++ b/client/stylesheets/map.import.styl
@@ -18,6 +18,7 @@ arrow-height = (arrow-width / 2)
   margin-top (-(arrow-top + arrow-height))
   margin-left (-(marker-width / 2))
   text-shadow 0px 2px 5px rgba(0,0,0,.1)
+  cursor pointer
   &::before
     content 'm'
     display block
